--- a/portfolio/scss/components/_buttons.scss
+++ b/portfolio/scss/components/_buttons.scss
@@ -67,6 +67,8 @@
     cursor: pointer;
 
     @include mq('phone-wide', max) {
+        width: 40px;
+        height: 40px;
         font-size: 1.6em;
     }
 
